# fe-chat-app-ktpm-hk2-2024

./: .gitignore  README.md  classDiagram.drawio
Zalo_ReDev/: HomeScreen.qml  Zalo_ReDev.pro  backendcommunication.cpp  backendcommunication.h  main.cpp  main.qml  qml.qrc
Zalo_ReDev/Backend/: GetUserData.py  downloadImage.py  tmp.py  uploadImage.py
Zalo_ReDev/Backend/STOMP/: main_pub.py  main_sub.py
Zalo_ReDev/ChartViewModel/: ChatComponent.qml
Zalo_ReDev/Zalo_reDev_3/: CMakeLists.txt  Zalo_reDev_3.qmlproject  Zalo_reDev_3.qmlproject.qtds  qmlmodules
Zalo_ReDev/Zalo_reDev_3/content/: App.qml  CMakeLists.txt  Test.qml
Zalo_ReDev/Zalo_reDev_3/content/ChartView/: ChatComponent.qml  ChatListView.qml  ConversationView.qml
Zalo_ReDev/Zalo_reDev_3/content/CustomComponent/: CircleImage.qml  PersionalInforView.qml
Zalo_ReDev/Zalo_reDev_3/content/LogginView/: LogginView.qml
Zalo_ReDev/Zalo_reDev_3/content/PersionalInforView/: InformationComponent.qml  PersionalInforView.qml
Zalo_ReDev/Zalo_reDev_3/imports/: CMakeLists.txt
Zalo_ReDev/Zalo_reDev_3/imports/Zalo_reDev_3/: CMakeLists.txt  qmldir
Zalo_ReDev/Zalo_reDev_3/imports/Zalo_reDev_3/designer/: plugin.metainfo
Zalo_ReDev/Zalo_reDev_3/src/: import_qml_plugins.h  main.cpp  test_only.cpp  test_only.h
Zalo_ReDev/Zalo_reDev_3/src/AppDefine/: define.cpp  define.h
Zalo_ReDev/Zalo_reDev_3/src/Controller/: pythoncontroller.cpp  pythoncontroller.h  usercontroller.cpp  usercontroller.h
Zalo_ReDev/Zalo_reDev_3/src/Model/: chatlist_model.cpp  chatlist_model.h  conversation_model.cpp  conversation_model.h  loggin_model.cpp  loggin_model.h  persionalinfor_model.cpp  persionalinfor_model.h
Zalo_ReDev/Zalo_reDev_3/src/ViewModel/: mainvm.cpp  mainvm.h
Zalo_ReDev/Zalo_reDev_3/src/ViewModel/ChatView/: chatlistvm.cpp  chatlistvm.h  conversationvm.cpp  conversationvm.h
Zalo_ReDev/Zalo_reDev_3/src/ViewModel/LogginView/: logginvm.cpp  logginvm.h
Zalo_ReDev/Zalo_reDev_3/src/ViewModel/PersionalInforView/: persionalinforvm.cpp  persionalinforvm.h
Zalo_ReDev/stomp_ws_py-master/: main_pub.py  main_sub.py
